Deploy add gallery-6-1, change header-1-1, add fonts css variables

--- a/header/header-1-1.html
+++ b/header/header-1-1.html
@@ -37,8 +37,21 @@
               <li class="header-1-1__nav-item"> <a class="header-1-1__nav-link" href="#">Contacts</a></li>
             </ul>
           </nav>
-          <div class="header-1-1__contacts"><a class="header-1-1__contacts-tel btn btn_medium" href="#">Call us</a>
-            <button class="header-1-1__contacts-btn btn btn_medium btn_black" type="button">Book a table</button>
+          <div class="header-1-1__contacts-desktop"><a class="header-1-1__contacts-desktop-tel btn btn_medium" href="#">Call us</a>
+            <button class="header-1-1__contacts-desktop-book btn btn_medium btn_black" type="button">Book a table</button>
+          </div>
+          <div class="header-1-1__contacts-mobile"><a class="header-1-1__contacts-mobile-tel header-1-1__contacts-mobile-btn" href="#"> 
+              <svg class="header-1-1__contacts-mobile-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.23 15.26L16.69 14.97C16.3914 14.9349 16.0887 14.968 15.8046 15.0667C15.5206 15.1654 15.2626 15.3273 15.05 15.54L13.21 17.38C10.3712 15.9362 8.06382 13.6288 6.62004 10.79L8.47004 8.94001C8.90004 8.51001 9.11004 7.91001 9.04004 7.30001L8.75004 4.78001C8.69335 4.29219 8.45923 3.84225 8.09228 3.51586C7.72532 3.18947 7.25115 3.00943 6.76004 3.01001H5.03004C3.90004 3.01001 2.96004 3.95001 3.03004 5.08001C3.56004 13.62 10.39 20.44 18.92 20.97C20.05 21.04 20.99 20.1 20.99 18.97V17.24C21 16.23 20.24 15.38 19.23 15.26Z" fill="currentColor"></path>
+              </svg></a>
+            <button class="header-1-1__contacts-mobile-book header-1-1__contacts-mobile-btn" type="button">
+              <svg class="header-1-1__contacts-mobile-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.5 3.75H4.5C4.08579 3.75 3.75 4.08579 3.75 4.5V19.5C3.75 19.9142 4.08579 20.25 4.5 20.25H19.5C19.9142 20.25 20.25 19.9142 20.25 19.5V4.5C20.25 4.08579 19.9142 3.75 19.5 3.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M16.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M7.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M3.75 8.25H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </button>
           </div>
           <button class="header-1-1__burger" type="button">   <span class="header-1-1__burger-item"></span><span class="header-1-1__burger-item"></span><span class="header-1-1__burger-item"></span></button>
               <div class="menu">
