add benefits-num-8, newsletter-2 sections

--- a/newsletter/newsletter-2.html
+++ b/newsletter/newsletter-2.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/newsletter/newsletter-2.css">
     <script defer src="../assets/scripts/base.js"></script>
-    <script defer src="../assets/scripts/newsletter/newsletter-2.js"></script>
   </head>
   <body>
     <section class="newsletter-2 section block">
@@ -22,8 +21,8 @@
           <div class="newsletter-2__form-block">
             <form class="newsletter-2__form" action="#"> 
               <div class="field field_large">
-                <label class="visually-hidden" for="#newsletter-email"> </label>
-                <input id="newsletter-email" type="email" placeholder="Enter your email">
+                <label class="visually-hidden" for="#newsletter-2-email"> </label>
+                <input id="newsletter-2-email" type="email" placeholder="Enter your email">
               </div>
               <button class="btn btn_large btn_black" type="submit">Subscribe </button>
             </form><span class="newsletter-2__text">We care about your data in our privacy policy.</span>
