Deploy cards-2, cards-3, feedback-4, gallery-8-2, thanks-1 sections, refactoring

--- a/benefits-num/benefits-num-3.html
+++ b/benefits-num/benefits-num-3.html
@@ -17,7 +17,7 @@
           <h2 class="benefits-num-3__title">Great products, faster than ever</h2>
           <p class="benefits-num-3__desc">Everything you need to build modern UI and great products.</p>
         </div>
-        <div class="row-container">
+        <div class="benefits-num-3__list-block">
           <ul class="row benefits-num-3__list">
             <li class="col-4 col-md">
               <div class="benefits-num-3__item"> 
