--- a/benefits-num/benefits-num-7.html
+++ b/benefits-num/benefits-num-7.html
@@ -19,7 +19,7 @@
             <p class="benefits-num-7__desc">Geniessen Sie unsere Köstlichkeiten und italienische Spezialitäten. Unsere Köche zaubern für Sie unvergessliche Geschmackserlebnisse. </p>
           </div>
         </div>
-        <div class="row-container">
+        <div class="benefits-num-7__list-block">
           <ul class="row benefits-num-7__list">
             <li class="col-4 col-md">
               <div class="benefits-num-7__item"> 
