--- a/benefits/benefits-4.html
+++ b/benefits/benefits-4.html
@@ -13,11 +13,16 @@
   <body>
     <section class="benefits-4 section block">
       <div class="benefits-4__container container"> 
-        <div class="benefits-4__text-block"> 
-          <div class="benefits-4__title-block"> <span class="benefits-4__subtitle subtitle">Features</span>
-            <h2 class="benefits-4__title">Analytics that feels like it’s from the future</h2>
+        <div class="benefits-4__top">
+          <div class="benefits">
+            <div class="benefits-4__icon-wrap"><img class="benefits-4__icon" src="../assets/images/benefits/benefit-12-icon.png" alt=""></div>
           </div>
-          <p class="benefits-4__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
+          <div class="benefits-4__text-block"> 
+            <div class="benefits-4__title-block"> <span class="benefits-4__subtitle subtitle">Features</span>
+              <h2 class="benefits-4__title">Analytics that feels like it’s from the future</h2>
+            </div>
+            <p class="benefits-4__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
+          </div>
         </div>
         <ul class="benefits-4__list">
           <li class="benefits-4__item"> 
