--- a/footer/footer-1.html
+++ b/footer/footer-1.html
@@ -14,7 +14,7 @@
     <footer class="footer-1 section block">
       <div class="footer-1__container container">
         <div class="footer-1__top">
-          <div class="footer-1__list row">
+          <div class="row footer-1__list">
             <div class="footer-1__item col-5 col-lg footer-1__item-left">
               <div class="footer-1__left"><a class="footer-1__logo" href="#"> <img class="footer-1__logo-img" src="http://via.placeholder.com/158x36" alt=""></a>
                 <p class="footer-1__desc">Design amazing digital experiences that create more happy in the world.</p>
