--- a/gallery/gallery-3-4.html
+++ b/gallery/gallery-3-4.html
@@ -14,7 +14,7 @@
     <section class="gallery-3-4 section block">
       <div class="gallery-3-4__container container"> 
         <h2 class="gallery-3-4__title">Gallery </h2>
-        <ul class="row gallery-3-4__list">
+        <ul class="gallery-3-4__list">
           <li class="gallery-3-4__item gallery-3-4__item_8">       <a class="gallery-3-4__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
               <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-1.jpg" alt=""></picture></a></li>
           <li class="gallery-3-4__item gallery-3-4__item_2">               <a class="gallery-3-4__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
