--- a/gallery/gallery-3-6.html
+++ b/gallery/gallery-3-6.html
@@ -15,7 +15,7 @@
     <section class="gallery-3-6 section block">
       <div class="gallery-3-6__container container"> 
         <h2 class="gallery-3-6__title">Gallery </h2>
-        <ul class="row gallery-3-6__list"> 
+        <ul class="gallery-3-6__list"> 
           <li class="gallery-3-6__item gallery-3-6__item_8">     <a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
               <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-1.jpg" alt=""></picture></a></li>
           <li class="gallery-3-6__item gallery-3-6__item_2">             <a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
