--- a/gallery/gallery-8-1.html
+++ b/gallery/gallery-8-1.html
@@ -15,7 +15,7 @@
     <section class="gallery-8-1 section block">
       <div class="gallery-8-1__container container"> 
         <h2 class="gallery-8-1__title">Gallery </h2>
-        <ul class="row gallery-8-1__list"> 
+        <ul class="gallery-8-1__list"> 
           <li class="gallery-8-1__item gallery-8-1__item_12">       <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
               <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/1290x516" alt=""></picture></a></li>
           <li class="gallery-8-1__item gallery-8-1__item_6">             <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
