--- a/gallery/gallery-6-1.html
+++ b/gallery/gallery-6-1.html
@@ -15,6 +15,34 @@
     <section class="gallery-6-1 section block">
       <div class="gallery-6-1__container container"> 
         <h2 class="gallery-6-1__title">Gallery </h2>
+        <div class="gallery-6-1__slider">
+          <div class="swiper gallery-6-1__slider">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="gallery-6-1__list-block">
         <ul class="gallery-6-1__list"> 
@@ -37,32 +65,6 @@
           <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-8.jpg" alt=""></picture></a></li>
         </ul>
-        <div class="swiper gallery-6-1__slider">
-          <ul class="swiper-wrapper">
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-          </ul>
-        </div>
       </div>
     </section>
   </body>
