--- a/hero/hero-4.html
+++ b/hero/hero-4.html
@@ -23,11 +23,14 @@
                 <div class="hero-4__text-block">
                   <h2 class="hero-4__title">Welcome to our restaurant</h2>
                   <p class="hero-4__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
-                  <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                  </svg></a>
+                </div>
+                <div class="hero-4__btn-block">
+                  <button class="hero-4__btn btn btn_large btn_black" type="button">Book a table</button><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg></a>
+                </div>
               </div>
             </div>
           </li>
@@ -38,11 +41,14 @@
                 <div class="hero-4__text-block">
                   <h2 class="hero-4__title">Welcome to our restaurant</h2>
                   <p class="hero-4__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
-                  <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                  </svg></a>
+                </div>
+                <div class="hero-4__btn-block">
+                  <button class="hero-4__btn btn btn_large btn_black" type="button">Book a table</button><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg></a>
+                </div>
               </div>
             </div>
           </li>
@@ -53,11 +59,14 @@
                 <div class="hero-4__text-block">
                   <h2 class="hero-4__title">Welcome to our restaurant</h2>
                   <p class="hero-4__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
-                  <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                  </svg></a>
+                </div>
+                <div class="hero-4__btn-block">
+                  <button class="hero-4__btn btn btn_large btn_black" type="button">Book a table</button><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg></a>
+                </div>
               </div>
             </div>
           </li>
@@ -68,11 +77,14 @@
                 <div class="hero-4__text-block">
                   <h2 class="hero-4__title">Welcome to our restaurant</h2>
                   <p class="hero-4__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
-                  <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                  </svg></a>
+                </div>
+                <div class="hero-4__btn-block">
+                  <button class="hero-4__btn btn btn_large btn_black" type="button">Book a table</button><a class="hero-4__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg></a>
+                </div>
               </div>
             </div>
           </li>
