Deploy shooting errors gallery-6-1, gallery-8-2

--- a/gallery/gallery-8-2.html
+++ b/gallery/gallery-8-2.html
@@ -16,47 +16,47 @@
       <div class="gallery-8-2__container container"> 
         <h2 class="gallery-8-2__title">Gallery </h2>
         <ul class="row gy-3 gallery-8-2__list">
-          <li class="col-12">
+          <li class="gallery-8-2__item gallery-8-2__item_12">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/1290x516" alt=""></picture></a></div>
           </li>
-          <li class="col-6">
+          <li class="gallery-8-2__item gallery-8-2__item_6">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/550x500" alt=""></picture></a></div>
           </li>
-          <li class="col-3">
+          <li class="gallery-8-2__item gallery-8-2__item_3">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/354x500" alt=""></picture></a></div>
           </li>
-          <li class="col-3">
+          <li class="gallery-8-2__item gallery-8-2__item_3">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/354x500" alt=""></picture></a></div>
           </li>
-          <li class="col-4">
+          <li class="gallery-8-2__item gallery-8-2__item_4">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/420x300" alt=""></picture></a></div>
           </li>
-          <li class="col-4">
+          <li class="gallery-8-2__item gallery-8-2__item_4">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/420x300" alt=""></picture></a></div>
           </li>
-          <li class="col-4">
+          <li class="gallery-8-2__item gallery-8-2__item_4">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/420x300" alt=""></picture></a></div>
           </li>
-          <li class="col-3">
+          <li class="gallery-8-2__item gallery-8-2__item_3">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/280x400" alt=""></picture></a></div>
           </li>
-          <li class="col-5">
+          <li class="gallery-8-2__item gallery-8-2__item_5">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/500x400" alt=""></picture></a></div>
           </li>
-          <li class="col-2">
+          <li class="gallery-8-2__item gallery-8-2__item_2">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/231x400" alt=""></picture></a></div>
           </li>
-          <li class="col-2">
+          <li class="gallery-8-2__item gallery-8-2__item_2">
             <div class="gallery-8-2__item"><a class="gallery-8-2__link" data-fslightbox="gallery-8-2" href="https://placehold.co/1200x600">
                 <picture class="gallery-8-2__img-wrap"><img class="gallery-8-2__img" src="https://placehold.co/231x400" alt=""></picture></a></div>
           </li>
@@ -89,6 +89,7 @@
             </ul>
           </div>
         </div>
+        <button class="gallery-8-2__btn" type="button">Mehr anzeigen</button>
       </div>
     </section>
   </body>
