--- a/gallery/gallery-6-1.html
+++ b/gallery/gallery-6-1.html
@@ -18,27 +18,27 @@
         <div class="gallery-6-1__slider">
           <div class="swiper gallery-6-1__slider">
             <ul class="swiper-wrapper">
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
                   <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
             </ul>
           </div>
@@ -46,23 +46,23 @@
       </div>
       <div class="gallery-6-1__list-block">
         <ul class="gallery-6-1__list"> 
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-1.jpg" alt=""></picture></a></li>
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-2.jpg" alt=""></picture></a></li>
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-3.jpg" alt=""></picture></a></li>
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-4.jpg" alt=""></picture></a></li>
         </ul>
         <ul class="gallery-6-1__list"> 
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-5.jpg" alt=""></picture></a></li>
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-6.jpg" alt=""></picture></a></li>
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-7.jpg" alt=""></picture></a></li>
-          <li class="gallery-6-1__item"><a class="gallery-6-1__item-link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+          <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-8.jpg" alt=""></picture></a></li>
         </ul>
       </div>
