Deploy fixing bugs gallery-7-1, footer-1, benefits-7 sections

--- a/benefits/benefits-7.html
+++ b/benefits/benefits-7.html
@@ -23,16 +23,22 @@
           <div class="col-4">
             <ul class="benefits-7__list"> 
               <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/images/benefits/benefit-7-icon.svg" alt="">
-                <h3 class="benefits-7__item-name">Share team inboxes</h3>
-                <p class="benefits-7__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+                <div class="benefits-7__item-text-block">
+                  <h3 class="benefits-7__item-name">Share team inboxes</h3>
+                  <p class="benefits-7__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+                </div>
               </li>
               <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/images/benefits/benefit-7-icon.svg" alt="">
-                <h3 class="benefits-7__item-name">Manage your team with reports</h3>
-                <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                <div class="benefits-7__item-text-block">
+                  <h3 class="benefits-7__item-name">Manage your team with reports</h3>
+                  <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                </div>
               </li>
               <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/images/benefits/benefit-7-icon.svg" alt="">
-                <h3 class="benefits-7__item-name">Deliver instant answers</h3>
-                <p class="benefits-7__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+                <div class="benefits-7__item-text-block">
+                  <h3 class="benefits-7__item-name">Deliver instant answers</h3>
+                  <p class="benefits-7__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+                </div>
               </li>
             </ul>
           </div>
@@ -42,16 +48,22 @@
           <div class="col-4">
             <ul class="benefits-7__list"> 
               <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/images/benefits/benefit-7-icon.svg" alt="">
-                <h3 class="benefits-7__item-name">Manage your team with reports</h3>
-                <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                <div class="benefits-7__item-text-block">
+                  <h3 class="benefits-7__item-name">Manage your team with reports</h3>
+                  <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                </div>
               </li>
               <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/images/benefits/benefit-7-icon.svg" alt="">
-                <h3 class="benefits-7__item-name">Connect with customers</h3>
-                <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                <div class="benefits-7__item-text-block">
+                  <h3 class="benefits-7__item-name">Connect with customers</h3>
+                  <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                </div>
               </li>
               <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/images/benefits/benefit-7-icon.svg" alt="">
-                <h3 class="benefits-7__item-name">Connect with customers</h3>
-                <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                <div class="benefits-7__item-text-block">
+                  <h3 class="benefits-7__item-name">Connect with customers</h3>
+                  <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                </div>
               </li>
             </ul>
           </div>
