--- a/footer/footer-1.html
+++ b/footer/footer-1.html
@@ -15,7 +15,7 @@
       <div class="footer-1__container container">
         <div class="footer-1__top">
           <div class="row footer-1__list">
-            <div class="footer-1__item col-5 col-lg footer-1__item-left">
+            <div class="footer-1__item col-6 col-xl-5 col-lg footer-1__item-left">
               <div class="footer-1__left"><a class="footer-1__logo" href="#"> <img class="footer-1__logo-img" src="http://via.placeholder.com/158x36" alt=""></a>
                 <p class="footer-1__desc">Design amazing digital experiences that create more happy in the world.</p>
                 <ul class="footer__schedule">
@@ -27,7 +27,12 @@
             </div>
             <div class="footer-1__item col-2 col-lg-4 col-sm"> 
               <div class="footer-1__nav"> 
-                <div class="footer-1__nav-title">Product</div>
+                <div class="footer-1__nav-title">
+                  <svg class="footer-1__nav-title_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                  </svg>Product
+                </div>
                 <ul class="footer-1__nav-list"> 
                   <li class="footer-1__nav-item"><a class="footer-1__nav-link" href="#">Overview</a></li>
                   <li class="footer-1__nav-item"><a class="footer-1__nav-link" href="#">Features</a></li>
@@ -40,7 +45,12 @@
             </div>
             <div class="footer-1__item col-2 col-lg-4 col-sm"> 
               <div class="footer-1__nav"> 
-                <div class="footer-1__nav-title">Company</div>
+                <div class="footer-1__nav-title">
+                  <svg class="footer-1__nav-title_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                  </svg>Company
+                </div>
                 <ul class="footer-1__nav-list"> 
                   <li class="footer-1__nav-item"><a class="footer-1__nav-link" href="#">About us</a></li>
                   <li class="footer-1__nav-item"><a class="footer-1__nav-link" href="#">Careers</a></li>
