--- a/gallery/gallery-3-6.html
+++ b/gallery/gallery-3-6.html
@@ -35,31 +35,45 @@
           <li class="gallery-3-6__item gallery-3-6__item_4">             <a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
               <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-9.jpg" alt=""></picture></a></li>
         </ul>
-        <div class="swiper gallery-3-6__slider">
-          <ul class="swiper-wrapper">
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-          </ul>
+      </div>
+      <div class="swiper gallery-3-6__slider">
+        <ul class="swiper-wrapper"> 
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+        </ul>
+        <div class="gallery-3-6__slider-btn-block">
+          <button class="gallery-3-6__slider-btn gallery-3-6__slider-btn_prev btn-arrow" type="button">
+            <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.25 12H3.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path d="M10.5 5.25L3.75 12L10.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+          </button>
+          <button class="gallery-3-6__slider-btn gallery-3-6__slider-btn_next btn-arrow" type="button">
+            <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3.75 12H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path d="M13.5 5.25L20.25 12L13.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">     </path>
+            </svg>
+          </button>
         </div>
       </div>
     </section>
