--- a/gallery/gallery-6-1.html
+++ b/gallery/gallery-6-1.html
@@ -15,34 +15,6 @@
     <section class="gallery-6-1 section block">
       <div class="gallery-6-1__container container"> 
         <h2 class="gallery-6-1__title">Gallery </h2>
-        <div class="gallery-6-1__slider">
-          <div class="swiper gallery-6-1__slider">
-            <ul class="swiper-wrapper">
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-              <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
-                  <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
-            </ul>
-          </div>
-        </div>
       </div>
       <div class="gallery-6-1__list-block">
         <ul class="gallery-6-1__list"> 
@@ -65,6 +37,46 @@
           <li class="gallery-6-1__item"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
               <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="../assets/images/gallery/6/img-8.jpg" alt=""></picture></a></li>
         </ul>
+      </div>
+      <div class="swiper gallery-6-1__slider">
+        <ul class="swiper-wrapper"> 
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="swiper-slide"><a class="gallery-6-1__link" data-fslightbox="gallery-6-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-6-1__img-wrap"><img class="gallery-6-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+        </ul>
+        <div class="gallery-6-1__slider-btn-block">
+          <button class="gallery-6-1__slider-btn gallery-6-1__slider-btn_prev btn-arrow" type="button">
+            <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.25 12H3.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path d="M10.5 5.25L3.75 12L10.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+          </button>
+          <button class="gallery-6-1__slider-btn gallery-6-1__slider-btn_next btn-arrow" type="button">
+            <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3.75 12H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path d="M13.5 5.25L20.25 12L13.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">     </path>
+            </svg>
+          </button>
+        </div>
       </div>
     </section>
   </body>
